--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.5.2",
     "firebase": "^11.3.1",
     "firebase-admin": "^12.7.0",
     "lucide-react": "^0.475.0",
