feat: implement complete email verification flow with Firebase Auth
- Add email verification handling in registration process
- Create verification pages for instructions and success states
- Implement server action to update Firestore emailVerified field
- Ensure synchronization between Firebase Auth and Firestore
- Add proper error handling and activity logging
- Fix user identification in verification link

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,9 @@
     "src/app/(app-dashboard)/layout.tsxX",
     "src/components/dashboard/dashboard-sidebar.tsxX",
     "src/components/SessionChecker.tsxX",
-    "src/app/(app-dashboard)/admin/layout.tsx"
+    "src/app/(app-dashboard)/admin/layout.tsx",
+    "src/actions/auth/register-with-verifications.tsxX",
+    "src/components/auth/RegisterFormWithVerificationX.tsxX"
   ],
   "exclude": ["node_modules"]
 }
