fix: handle Firebase email verification race condition
Improves error handling in email verification flow to gracefully handle
cases where the verification code has already been used by the server.
Prevents invalid-action-code errors from affecting user experience

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,9 @@
     "src/components/SessionChecker.tsxX",
     "src/app/(app-dashboard)/admin/layout.tsx",
     "src/actions/auth/register-with-verifications.tsxX",
-    "src/components/auth/RegisterFormWithVerificationX.tsxX"
+    "src/components/auth/RegisterFormWithVerificationX.tsxX",
+    "src/components/auth/EmailVerificationStatusX.tsxX",
+    "src/components/auth/EmailVerification.XtsxX"
   ],
   "exclude": ["node_modules"]
 }
