♻️ TypeScript cleanup: removed all type errors and improved error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,27 +22,10 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/app/(dashboard)/adminX/layout.tsxX",
-    "src/app/layout.tsxX",
-    "src/app/ClientLayout.tsxX",
-    "src/app/(root)/layout.tsxX",
-    "src/app/(dashboard)/user/layout.tsx",
-    "src/components/DashboardSidebar.tsxX",
-    "src/app/(dashboard)/layout.tsxX",
-    "src/components/dashboard/dashboard-sidebar.tsxX",
-    "src/components/SessionChecker.tsxX",
-    "src/app/(dashboard)/admin/layout.tsx",
-    "src/actions/auth/register-with-verifications.tsxX",
-    "src/components/auth/RegisterFormWithVerificationX.tsxX",
-    "src/components/auth/EmailVerificationStatusX.tsxX",
-    "src/components/auth/EmailVerification.XtsxX",
-    "src/components/dashboard/admin/UsersClient.tsx",
-    "src/components/SecuritySettingsForm.tsxX"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "types", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": [
+    "node_modules",
+    "**/*.tsxX", // Optional: if you ever keep these again
+    "**/*.bak.tsx" // Optional: for backups
+  ]
 }
