--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "firebase": "^11.3.1",
     "firebase-admin": "^12.7.0",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
