--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/dashboard/admin/admin-profile/AdminProfileForm.Xtsx"
+    "src/components/dashboard/admin/admin-profile/AdminProfileForm.Xtsx",
+    "src/firebase/security/firestore.rules"
   ],
   "exclude": ["node_modules"]
 }
