--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.3.1",
     "firebase-admin": "^12.7.0",
